[package]
name = "up-zenoh-example"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lints.clippy]
all = "deny"
pedantic = "deny"
#cargo = "deny"
#restriction = "deny"
#nursery = "deny"

[dependencies]
async-trait = "0.1"
chrono = "0.4.31"
env_logger = "0.10.0"
tokio = { version = "1.35.1", default-features = false }
up-rust = { git = "https://github.com/eclipse-uprotocol/up-rust", rev = "3a50104421a801d52e1d9c68979db54c013ce43d" }
up-transport-zenoh = { git = "https://github.com/eclipse-uprotocol/up-transport-zenoh-rust", rev = "7c839e7a94f526a82027564a609f48a79a3f4eae" }
zenoh = { version = "0.11.0-rc.3", features = ["unstable"]}

[[bin]]
name = "publisher"
path = "src/publisher.rs"

[[bin]]
name = "subscriber"
path = "src/subscriber.rs"

[[bin]]
name = "rpc_client"
path = "src/rpc_client.rs"

[[bin]]
name = "rpc_server"
path = "src/rpc_server.rs"
